// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatsDReporter Constructor Creates a StatsDReporter 1`] = `
StatsDReporter {
  "client": Client {
    "ephemeral_socket": null,
    "global_tags": undefined,
    "host": "localhost",
    "last_used_timer": null,
    "port": 8125,
    "socket": null,
  },
  "context": Context {
    "globalTags": Object {},
  },
  "format": Object {
    "format": [Function],
  },
}
`;

exports[`StatsDReporter Constructor Creates a StatsDReporter with a client 1`] = `
StatsDReporter {
  "client": Client {
    "ephemeral_socket": null,
    "global_tags": undefined,
    "host": "host",
    "last_used_timer": null,
    "port": 8888,
    "socket": null,
  },
  "context": Context {
    "globalTags": Object {},
  },
  "format": Object {
    "format": [Function],
  },
}
`;

exports[`StatsDReporter Constructor Creates a StatsDReporter with a format 1`] = `
StatsDReporter {
  "client": Client {
    "ephemeral_socket": null,
    "global_tags": undefined,
    "host": "localhost",
    "last_used_timer": null,
    "port": 8125,
    "socket": null,
  },
  "context": Context {
    "globalTags": Object {},
  },
  "format": Object {
    "format": [Function],
  },
}
`;

exports[`StatsDReporter Constructor Creates a StatsDReporter with a host 1`] = `
StatsDReporter {
  "client": Client {
    "ephemeral_socket": null,
    "global_tags": undefined,
    "host": "host",
    "last_used_timer": null,
    "port": 8125,
    "socket": null,
  },
  "context": Context {
    "globalTags": Object {},
  },
  "format": Object {
    "format": [Function],
  },
}
`;

exports[`StatsDReporter Constructor Creates a StatsDReporter with a port 1`] = `
StatsDReporter {
  "client": Client {
    "ephemeral_socket": null,
    "global_tags": undefined,
    "host": "localhost",
    "last_used_timer": null,
    "port": 5555,
    "socket": null,
  },
  "context": Context {
    "globalTags": Object {},
  },
  "format": Object {
    "format": [Function],
  },
}
`;

exports[`StatsDReporter Constructor Creates a StatsDReporter with global tags 1`] = `
StatsDReporter {
  "client": Client {
    "ephemeral_socket": null,
    "global_tags": undefined,
    "host": "localhost",
    "last_used_timer": null,
    "port": 8125,
    "socket": null,
  },
  "context": Context {
    "globalTags": Object {
      "globalTag1": "global_one",
      "globalTag2": "global_two",
    },
  },
  "format": Object {
    "format": [Function],
  },
}
`;

exports[`StatsDReporter close Closes the socket 1`] = `
Array [
  Array [],
]
`;

exports[`StatsDReporter decrement Reports a counter metric 1`] = `
Array [
  Array [
    "decrement_test",
    0.5,
    Array [
      "tag_1:one",
      "tag_2:two",
    ],
  ],
]
`;

exports[`StatsDReporter decrementBy Reports a counter metric 1`] = `
Array [
  Array [
    "decrement_by_test",
    10,
    Array [
      "tag_1:one",
      "tag_2:two",
    ],
  ],
]
`;

exports[`StatsDReporter gauge Reports a gauge metric 1`] = `
Array [
  Array [
    "gauge_test",
    10,
    0.5,
    Array [
      "tag_1:one",
      "tag_2:two",
    ],
  ],
]
`;

exports[`StatsDReporter histogram Reports a histogram metric 1`] = `
Array [
  Array [
    "histogram_test",
    20,
    0.5,
    Array [
      "tag_1:one",
      "tag_2:two",
    ],
  ],
]
`;

exports[`StatsDReporter increment Reports a counter metric 1`] = `
Array [
  Array [
    "increment_test",
    0.5,
    Array [
      "tag_1:one",
      "tag_2:two",
    ],
  ],
]
`;

exports[`StatsDReporter incrementBy Reports a counter metric 1`] = `
Array [
  Array [
    "increment_by_test",
    10,
    Array [
      "tag_1:one",
      "tag_2:two",
    ],
  ],
]
`;

exports[`StatsDReporter timing Reports a timing metric 1`] = `
Array [
  Array [
    "timing_test",
    20,
    0.5,
    Array [
      "tag_1:one",
      "tag_2:two",
    ],
  ],
]
`;
